# dumpling

./: Cargo.toml  Makefile  README.md  idea.md
src/: color.rs  configuration.rs  listing.rs  main.rs  ui.rs
src/args/: parser.rs
src/configuration/: config.rs
src/file/: loader.rs  parser.rs
src/key/: event.rs
src/listing/: pdfs.rs  tags.rs
src/logger/: logger.rs
src/popup/: popup.rs
src/ui/: author.rs  description.rs  explorer.rs  tags.rs  title.rs  ui_wrapper.rs  window.rs
