[package]
name = "dumpling"
version = "0.1.1"
edition = "2021"
authors = ["Aaron Gobeyn"]
repository = "https://github.com/Gobeyn/dumpling"
license = "GNU GENERAL PUBLIC LICENSE"

[dependencies]
ratatui = "0.27.0"
dirs = "5.0.1"
getopts = "0.2.21"
crossterm = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
regex = "1.10.5"
wl-clipboard-rs = "0.9.0"
