[package]
name = "dumpling"
version = "0.1.5"
edition = "2021"
authors = ["Aaron Gobeyn"]
repository = "https://github.com/Gobeyn/dumpling"
license = "GNU GENERAL PUBLIC LICENSE"

[dependencies]
ratatui = "0.27.0"
dirs = "5.0.1"
getopts = "0.2.21"
crossterm = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
regex = "1.10.5"
cli-clipboard = "0.4.0"
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
